--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@ Use below html tag for RTL version
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700|Roboto:300,400,500,600,700|Material+Icons" rel="stylesheet">
-    <title>EMS | Employees Management System</title>
+    <title>iMoney | Admin Management System</title>
   </head>
   <body>
     <noscript>
